force-app/main/default/objects/Contact/fields/Ent_Topic_NGC_Opt_Out_Date__c.field-meta.xml
<CustomField>
    <fullName>Ent_Topic_NGC_Opt_Out_Date__c</fullName>
    <label>Ent Topic - NGC Opt-Out Date</label>
    <type>Date</type>
</CustomField>