force-app/main/default/objects/Contact/fields/Experience_as_an_Instructor__c.field-meta.xml
<CustomField>
    <fullName>Experience_as_an_Instructor__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586 &amp; 2656)</description>
    <label>Experience as an Instructor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None or very little</fullName>
            </value>
            <value>
                <fullName>1 to 2 years of instructing</fullName>
            </value>
            <value>
                <fullName>3 to 5 years of instructing</fullName>
            </value>
            <value>
                <fullName>5 or more years of instructing</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <isActive>false</isActive>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>Beginner</fullName>
                <isActive>false</isActive>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
                <isActive>false</isActive>
                <label>Intermediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>