force-app/main/default/objects/Contact/fields/Expiration_Date_of_CIP__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date_of_CIP__c</fullName>
    <defaultValue>DATE(2021,12,31)</defaultValue>
    <description>SDS-2656 DLI/DMS 2.0 project
JIRA# SDS-2793:  The default populated date values should either be changed to future date or remove it by December 2021.</description>
    <label>Expiration Date of CIP</label>
    <type>Date</type>
</CustomField>