force-app/main/default/objects/Contact/fields/First_Application_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Application_Date__c</fullName>
    <description>SDS-2927 -DLI/DMS 2.0 project changes</description>
    <label>First Application Date</label>
    <type>Date</type>
</CustomField>