force-app/main/default/objects/Contact/fields/Fluency_in_Language__c.field-meta.xml
<CustomField>
    <fullName>Fluency_in_Language__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586)</description>
    <label>Fluency in Language</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>French</fullName>
            </value>
            <value>
                <fullName>German</fullName>
            </value>
            <value>
                <fullName>Japanese</fullName>
            </value>
            <value>
                <fullName>Korean</fullName>
            </value>
            <value>
                <fullName>Portuguese</fullName>
            </value>
            <value>
                <fullName>Spanish</fullName>
            </value>
            <value>
                <fullName>Traditional Chinese</fullName>
            </value>
            <value>
                <fullName>Simplified Chinese</fullName>
            </value>
            <value>
                <fullName>Afrikaans</fullName>
                <isActive>false</isActive>
                <label>Afrikaans</label>
            </value>
            <value>
                <fullName>Arabic</fullName>
                <isActive>false</isActive>
                <label>Arabic</label>
            </value>
            <value>
                <fullName>Bahasa Indonesia</fullName>
                <isActive>false</isActive>
                <label>Bahasa Indonesia</label>
            </value>
            <value>
                <fullName>Bengali</fullName>
                <isActive>false</isActive>
                <label>Bengali</label>
            </value>
            <value>
                <fullName>Bosnian</fullName>
                <isActive>false</isActive>
                <label>Bosnian</label>
            </value>
            <value>
                <fullName>Bulgarian</fullName>
                <isActive>false</isActive>
                <label>Bulgarian</label>
            </value>
            <value>
                <fullName>Cantonese</fullName>
                <isActive>false</isActive>
                <label>Cantonese</label>
            </value>
            <value>
                <fullName>Catalan</fullName>
                <isActive>false</isActive>
                <label>Catalan</label>
            </value>
            <value>
                <fullName>Chinese</fullName>
                <isActive>false</isActive>
                <label>Chinese</label>
            </value>
            <value>
                <fullName>Croatian</fullName>
                <isActive>false</isActive>
                <label>Croatian</label>
            </value>
            <value>
                <fullName>Danish</fullName>
                <isActive>false</isActive>
                <label>Danish</label>
            </value>
            <value>
                <fullName>Dutch</fullName>
                <isActive>false</isActive>
                <label>Dutch</label>
            </value>
            <value>
                <fullName>Greek</fullName>
                <isActive>false</isActive>
                <label>Greek</label>
            </value>
            <value>
                <fullName>Gujarati</fullName>
                <isActive>false</isActive>
                <label>Gujarati</label>
            </value>
            <value>
                <fullName>Hebrew</fullName>
                <isActive>false</isActive>
                <label>Hebrew</label>
            </value>
            <value>
                <fullName>Hindi</fullName>
                <isActive>false</isActive>
                <label>Hindi</label>
            </value>
            <value>
                <fullName>Indonesian</fullName>
                <isActive>false</isActive>
                <label>Indonesian</label>
            </value>
            <value>
                <fullName>Italian</fullName>
                <isActive>false</isActive>
                <label>Italian</label>
            </value>
            <value>
                <fullName>Kannada</fullName>
                <isActive>false</isActive>
                <label>Kannada</label>
            </value>
            <value>
                <fullName>Malay</fullName>
                <isActive>false</isActive>
                <label>Malay</label>
            </value>
            <value>
                <fullName>Malyalam</fullName>
                <isActive>false</isActive>
                <label>Malyalam</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>