force-app/main/default/objects/Contact/fields/Form_Comments__c.field-meta.xml
<CustomField>
    <fullName>Form_Comments__c</fullName>
    <label>Form Comments</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>