force-app/main/default/objects/Contact/fields/GPU_Genius_Groups__c.field-meta.xml
<CustomField>
    <fullName>GPU_Genius_Groups__c</fullName>
    <inlineHelpText>Select all GPU Genius groups this user needs to be added to</inlineHelpText>
    <label>GPU Genius Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Learning ATP Partner:5874323</fullName>
            </value>
            <value>
                <fullName>Learning Cisco:5501047</fullName>
            </value>
            <value>
                <fullName>Learning Compute:3200491</fullName>
            </value>
            <value>
                <fullName>Learning Compute DGX:5753092</fullName>
            </value>
            <value>
                <fullName>Learning CSP:5769933</fullName>
            </value>
            <value>
                <fullName>Learning Dell:4657800</fullName>
            </value>
            <value>
                <fullName>Learning Dell Data Center:5843833</fullName>
            </value>
            <value>
                <fullName>Learning Dell Workstation:4657800</fullName>
            </value>
            <value>
                <fullName>Learning Embedded Edge:5879418</fullName>
            </value>
            <value>
                <fullName>Learning GSI:5942052</fullName>
            </value>
            <value>
                <fullName>Learning Healthcare:5877534</fullName>
            </value>
            <value>
                <fullName>Learning HPE: 5414314</fullName>
            </value>
            <value>
                <fullName>Learning HPI:5844095</fullName>
            </value>
            <value>
                <fullName>Learning IBM Cloud:5191859</fullName>
            </value>
            <value>
                <fullName>Learning IBM Power:5844092</fullName>
            </value>
            <value>
                <fullName>Learning Industry:5877534</fullName>
            </value>
            <value>
                <fullName>Learning Lenovo DCG:5550970</fullName>
            </value>
            <value>
                <fullName>Learning Lenovo Workstation:5845271</fullName>
            </value>
            <value>
                <fullName>Learning NPN Community:4997879</fullName>
            </value>
            <value>
                <fullName>Learning SA DCP:5942050</fullName>
            </value>
            <value>
                <fullName>Learning SDP PS:5937339</fullName>
            </value>
            <value>
                <fullName>Learning Services Subcontractors:5674835</fullName>
            </value>
            <value>
                <fullName>Learning Virtualization:2965513</fullName>
            </value>
            <value>
                <fullName>Learning Visualization:4320588</fullName>
            </value>
            <value>
                <fullName>NPN Compute DGX Sales:5765886</fullName>
            </value>
            <value>
                <fullName>NPN Compute DGX Technical:5765889</fullName>
            </value>
            <value>
                <fullName>NPN Compute Sales:5642753</fullName>
            </value>
            <value>
                <fullName>NPN Compute Sales CHINESE:5754894</fullName>
            </value>
            <value>
                <fullName>NPN Compute Technical:5642754</fullName>
            </value>
            <value>
                <fullName>NPN CSP Virtualization Sales:5749415</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>