force-app/main/default/objects/Contact/fields/GRID_Software_Evaluation_PAK__c.field-meta.xml
<CustomField>
    <fullName>GRID_Software_Evaluation_PAK__c</fullName>
    <description>To store GRID EVAL Registration Id</description>
    <inlineHelpText>GRID EVAL Registration Id</inlineHelpText>
    <label>GRID Software Evaluation PAK</label>
    <length>255</length>
    <type>Text</type>
</CustomField>