force-app/main/default/objects/Contact/fields/GTC_Sessions_Attended__c.field-meta.xml
<CustomField>
    <fullName>GTC_Sessions_Attended__c</fullName>
    <label>GTC Sessions Attended</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>