force-app/main/default/objects/Contact/fields/GU_LSID__c.field-meta.xml
<CustomField>
    <fullName>GU_LSID__c</fullName>
    <label>GU LSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>