force-app/main/default/objects/Contact/fields/HQ_LSID__c.field-meta.xml
<CustomField>
    <fullName>HQ_LSID__c</fullName>
    <label>HQ LSID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>