force-app/main/default/objects/Contact/fields/IDM_CountryCode__c.field-meta.xml
<CustomField>
    <fullName>IDM_CountryCode__c</fullName>
    <label>IDM_CountryCode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>