force-app/main/default/objects/Contact/fields/IDM_DGX_Callout_Message__c.field-meta.xml
<CustomField>
    <fullName>IDM_DGX_Callout_Message__c</fullName>
    <label>IDM_DGX_Callout_Message</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>