force-app/main/default/objects/Contact/fields/IDM_ExternalId__c.field-meta.xml
<CustomField>
    <fullName>IDM_ExternalId__c</fullName>
    <description>This will be used for DGX Registration just for coding. Format is going to be AccountID+&apos;-&apos;+Email</description>
    <externalId>true</externalId>
    <label>IDM_ExternalId</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>