force-app/main/default/objects/Contact/fields/Instructor_Certifications_Active__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Certifications_Active__c</fullName>
    <description>SDS-2793</description>
    <label>Instructor Certifications Active</label>
    <summaryFilterItems>
        <field>Certifications__c.isCertification_Active__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Certifications__c.Contact__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>