force-app/main/default/objects/Contact/fields/Instructor_Type__c.field-meta.xml
<CustomField>
    <fullName>Instructor_Type__c</fullName>
    <description>SDS-2141 - Sales: Contact pick list for DLI team</description>
    <label>Instructor Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NVIDIA - SA</fullName>
            </value>
            <value>
                <fullName>NVIDIA - Other</fullName>
            </value>
            <value>
                <fullName>Ambassador</fullName>
            </value>
            <value>
                <fullName>SDP</fullName>
            </value>
            <value>
                <fullName>Ambassador &amp; SDP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>