force-app/main/default/objects/Contact/fields/is_DGX_Contact__c.field-meta.xml
<CustomField>
    <fullName>is_DGX_Contact__c</fullName>
    <defaultValue>false</defaultValue>
    <label>is DGX Contact</label>
    <type>Checkbox</type>
</CustomField>