force-app/main/default/objects/Contact/fields/Is_End_Customer__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Customer__c</fullName>
    <formula>IF( Account.Is_End_Customer__c = True, True, False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is End Customer</label>
    <type>Checkbox</type>
</CustomField>