force-app/main/default/objects/Contact/fields/Is_End_Customer_VAR__c.field-meta.xml
<CustomField>
    <fullName>Is_End_Customer_VAR__c</fullName>
    <formula>False</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is End Customer/VAR</label>
    <type>Checkbox</type>
</CustomField>