force-app/main/default/objects/Contact/fields/Is_Mailing_Address_Changed__c.field-meta.xml
<CustomField>
    <fullName>Is_Mailing_Address_Changed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Mailing Address Changed</label>
    <type>Checkbox</type>
</CustomField>