force-app/main/default/objects/Contact/fields/Is_Reseller_Contact__c.field-meta.xml
<CustomField>
    <fullName>Is_Reseller_Contact__c</fullName>
    <formula>IF( Account.IsNPN_VAR_OEM__c = True,True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Reseller Contact</label>
    <type>Checkbox</type>
</CustomField>