force-app/main/default/objects/Contact/fields/Is_VGPU_Eval_Extension__c.field-meta.xml
<CustomField>
    <fullName>Is_VGPU_Eval_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is VGPU Eval Extension?</label>
    <type>Checkbox</type>
</CustomField>