force-app/main/default/objects/Contact/fields/isActive_Instructor__c.field-meta.xml
<CustomField>
    <fullName>isActive_Instructor__c</fullName>
    <description>SDS-2793</description>
    <formula>AND(
  NOT(ISBLANK(Email)),
  OR(
    ISNULL(Expiration_Date_of_CIP__c),
    TODAY() &lt; Expiration_Date_of_CIP__c 
  ),
  Instructor_Certifications_Active__c &gt; 0
)</formula>
    <label>isActive Instructor</label>
    <type>Checkbox</type>
</CustomField>