force-app/main/default/objects/Contact/fields/Jetson_Github_repository__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Github_repository__c</fullName>
    <description>As per Jira #SDS-3046 - Jetson AI info</description>
    <label>Jetson-Github repository</label>
    <type>Url</type>
</CustomField>