force-app/main/default/objects/Contact/fields/Jetson_Video_link__c.field-meta.xml
<CustomField>
    <fullName>Jetson_Video_link__c</fullName>
    <description>As per Jira #SDS-3046 - Jetson AI info</description>
    <label>Jetson-Video link</label>
    <type>Url</type>
</CustomField>