force-app/main/default/objects/Contact/fields/Job_Role__c.field-meta.xml
<CustomField>
    <fullName>Job_Role__c</fullName>
    <label>Job Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Channel/Partners</fullName>
            </value>
            <value>
                <fullName>Chief Executive Officer (CEO)</fullName>
            </value>
            <value>
                <fullName>Chief Information Officer (CIO)</fullName>
            </value>
            <value>
                <fullName>Chief Technology Officer (CTO)</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Data Scientist</fullName>
            </value>
            <value>
                <fullName>Developer/Programmer</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Engineer</fullName>
            </value>
            <value>
                <fullName>Executive/Management</fullName>
            </value>
            <value>
                <fullName>Film/Video Editor</fullName>
            </value>
            <value>
                <fullName>Graphic Designer/Animator</fullName>
            </value>
            <value>
                <fullName>Industrial Designer/Product Designer</fullName>
            </value>
            <value>
                <fullName>IT Administrator/Systems Administrator</fullName>
            </value>
            <value>
                <fullName>IT Manager/Director of IT/VP of IT</fullName>
            </value>
            <value>
                <fullName>Marketing/Communications</fullName>
            </value>
            <value>
                <fullName>Marketing Manager</fullName>
            </value>
            <value>
                <fullName>Product Design/Engineering</fullName>
            </value>
            <value>
                <fullName>Product Management/Technical Marketing</fullName>
            </value>
            <value>
                <fullName>Professor/Department Advisor</fullName>
            </value>
            <value>
                <fullName>Purchasing Manager</fullName>
            </value>
            <value>
                <fullName>Renewal Contact</fullName>
            </value>
            <value>
                <fullName>Research Scientist</fullName>
            </value>
            <value>
                <fullName>Sales/Business Development</fullName>
            </value>
            <value>
                <fullName>Sales Engineer</fullName>
            </value>
            <value>
                <fullName>Sales Rep/Sales Manager</fullName>
            </value>
            <value>
                <fullName>Senior Vice President (SVP)</fullName>
            </value>
            <value>
                <fullName>Student/Post Grad</fullName>
            </value>
            <value>
                <fullName>Support/Services</fullName>
            </value>
            <value>
                <fullName>Vice President (VP)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>