force-app/main/default/objects/Contact/fields/Last_Touch_Program_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Program_Type__c</fullName>
    <businessOwnerUser>dersun@nvidia.com.trprod</businessOwnerUser>
    <label>Last Touch Program Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>