force-app/main/default/objects/Contact/fields/Lead_Id_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Id_For_Contact__c</fullName>
    <description>Mapped from Leads&apos;s &quot;Lead Id For Contact&quot; field.
Set it to External ID as the Lead Conversion OCR was failing</description>
    <externalId>true</externalId>
    <label>Lead Id For Contact</label>
    <length>18</length>
    <type>Text</type>
</CustomField>