force-app/main/default/objects/Contact/fields/Lead_Origin_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Origin_Contact__c</fullName>
    <label>Lead Origin (Contact)</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Citrix Servtech</fullName>
            </value>
            <value>
                <fullName>EMEAI Training Web Form</fullName>
            </value>
            <value>
                <fullName>NPN Application</fullName>
            </value>
            <value>
                <fullName>NPN Community Web Form</fullName>
            </value>
            <value>
                <fullName>NPN SOEM Web Form</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>