force-app/main/default/objects/Contact/fields/Lead_Record_Type_For_Contact__c.field-meta.xml
<CustomField>
    <fullName>Lead_Record_Type_For_Contact__c</fullName>
    <description>Mapped from corresponding field on Lead object. Used to set the contact record type after conversion</description>
    <label>Lead Record Type For Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>