force-app/main/default/objects/Contact/fields/leadspacesync__Company_Website__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Company_Website__c</fullName>
    <formula>Account.Website</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Website</label>
    <type>Text</type>
</CustomField>