force-app/main/default/objects/Contact/fields/leadspacesync__LS_Enriched_Trigger__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__LS_Enriched_Trigger__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LS Enriched Trigger</label>
    <type>Checkbox</type>
</CustomField>