force-app/main/default/objects/Contact/fields/leadspacesync__Status__c.field-meta.xml
<CustomField>
    <fullName>leadspacesync__Status__c</fullName>
    <label>Leadspace Record Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failure (SF related)</fullName>
            </value>
            <value>
                <fullName>Failure (LS related)</fullName>
            </value>
            <value>
                <fullName>Partial Success</fullName>
            </value>
            <value>
                <fullName>Failure</fullName>
                <isActive>false</isActive>
                <label>Failure</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>