force-app/main/default/objects/Contact/fields/Level_of_Expertise_certification__c.field-meta.xml
<CustomField>
    <fullName>Level_of_Expertise_certification__c</fullName>
    <description>For DLI Instructor Lead process (SDS-2586 &amp; 2656)</description>
    <label>Level of Expertise - certification</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner (1-2 years of research or development)</fullName>
            </value>
            <value>
                <fullName>Intermediate (2-3 years of research or development)</fullName>
            </value>
            <value>
                <fullName>Advanced (3+ years of research or development)</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
                <isActive>false</isActive>
                <label>Advanced</label>
            </value>
            <value>
                <fullName>Beginner</fullName>
                <isActive>false</isActive>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
                <isActive>false</isActive>
                <label>Intermediate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>