force-app/main/default/objects/Contact/fields/Linkedin_Profile_Link__c.field-meta.xml
<CustomField>
    <fullName>Linkedin_Profile_Link__c</fullName>
    <description>For DLI instructor Lead process (SDS-2586)</description>
    <label>Linkedin Profile Link</label>
    <type>Url</type>
</CustomField>