force-app/main/default/objects/Contact/fields/LIST_CUDATESLA__c.field-meta.xml
<CustomField>
    <fullName>LIST_CUDATESLA__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo field for reporting</description>
    <label>LIST_CUDATESLA</label>
    <type>Checkbox</type>
</CustomField>