force-app/main/default/objects/Contact/fields/LIST_DATA_ANALYTICS__c.field-meta.xml
<CustomField>
    <fullName>LIST_DATA_ANALYTICS__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo field for reporting</description>
    <label>LIST_DATA_ANALYTICS</label>
    <type>Checkbox</type>
</CustomField>