force-app/main/default/objects/Contact/fields/LIST_DEEP_LEARNING__c.field-meta.xml
<CustomField>
    <fullName>LIST_DEEP_LEARNING__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Marketo field for reporting</description>
    <label>LIST_DEEP_LEARNING</label>
    <type>Checkbox</type>
</CustomField>